--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,6 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	jchristensen/Timezone@^1.2.4
 	paulstoffregen/Time@^1.6.1
+	olikraus/U8g2@^2.34.18
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-
